--- a/Treehouse-Tech-Degree-Unit-3/css/style.css
+++ b/Treehouse-Tech-Degree-Unit-3/css/style.css
@@ -17,17 +17,44 @@ button {
 body {
   font: 1em/1.5;
   color: rgba(6, 49, 68, 0.9);
-	background: #CDE0FB;
+	background: #05386B;
+	margin: 0
 }
 
 header {
-	text-align: center;  
+	text-align: left;
+	margin-top: -30px;
+	background: #5CDB95;
+	width: 100%;
+
+}
+
+footer {
+	background: #5CDB95;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	padding: 10px;
+	margin-top: 30px
+}
+
+footer img {
+	width: 50px;
+	height: auto;
+	padding: 10px
 }
 
 h1 {
 	font-size: 2.5em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.85);
 	margin: 0;
+	margin-left: 25px;
+	font-family: sans-serif;
+	color: #05386B;
+	letter-spacing: -3px;
+}
+
+span{
+	margin-left: 25px
 }
 
 a {
@@ -40,8 +67,8 @@ a {
 
 form {
 	padding: .875em 1.875em 1.875em;
-	background: #9BBEEF;
-	border: 2px solid rgba(8, 63, 87, 0.6);
+	background: #05386B;
+	margin-top: 10px;
 	border-radius: 3px;
 }
 
@@ -62,10 +89,15 @@ button {
 }
 
 legend {
-	font-weight: bold;
+	font-weight: 500;
+	letter-spacing: -1px;
+	font-family: sans-serif;
 	padding-top: .5em;
-	border-top: 2px solid rgba(8, 63, 87, 0.6);
-	margin-bottom: 1.125em;
+	border-top: 2px solid #EDF5E1;
+	padding-top: 20px;
+	margin-bottom: 1.5em;
+	color: white;
+	font-size: 22px
 }
 
 input[type="text"],
@@ -75,7 +107,7 @@ legend {
 }
 
 label {
-	color: #000;
+	color: white;
 	display: block;
 	margin-bottom: .5em;
 }
@@ -90,15 +122,19 @@ input {
 	font-weight: 500;
 	padding: .8em;
 	background: #e9f6fb;
-	border: 2px solid rgb(111, 157, 220);
+	border: 2px solid #5CDB95;
 	border-radius: 3px;
 	outline: none;
 }
 
 input:focus {
-	background: #fff;
-	border-color: #5e97b0;
+	background: #F5F5F5;
+	border-color: #e9f6fb ;
 	transition: border-color .4s, background-color .4s;
+	color: #05386B;
+	font-family: sans-serif;
+	font-size: 18px
+	
 }
 
 input[type="checkbox"],
@@ -107,18 +143,20 @@ input[type="radio"] {
 }
 
 button {
-	color: #fff;
+	color: #05386B ;
 	padding: .55em 1.25em;
-	background: #083f57;
+	background: #5CDB95;
 	margin: 1.25em 0 .5em;
 	cursor: pointer;
-	border: 2px solid black;
+	border: 2px solid #EDf5E1;
 	border-radius: 4px;
 	transition: all 0.5s;
 }
 
 button:hover {
-	background: #6F9DDC;
+	background: #05386B;
+	color: #5CDB95;
+	border: 2px solid #EDf5E1
 }
 
 input, 
@@ -130,10 +168,60 @@ option {
 /* ================================= 
   Page Styles
 ==================================== */
+select{
+	font-size: 16px;
+	font-family: sans-serif;
+	letter-spacing: 1px
+}
+
+.activities{
+	letter-spacing: 2px;
+}
+
+.mainConf{
+	border: 4px solid #EDf5E1;
+	padding: 10px;
+	text-align: center;
+	background: #5CDB95;
+	color: #05386B;
+}
+
+.sectionOne{
+	margin-top: 20px;
+	background:#05386B ;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+}
+
+.sectionOne label{
+	width: 400px;
+	padding: 20px;
+	text-align: center;
+	color: #05386B;
+	border: 3px solid #EDf5E1;
+	background: #5CDB95;
+	flex-wrap: wrap;
+	margin: 10px
+
+}
+
+.sectionOne label:hover{
+	cursor: pointer;
+	background: #05386B;
+	color: #5CDB95;
+}
+
+.mainConf:hover {
+	cursor: pointer;
+	background: #05386B;
+	color: #5CDB95;
+}
 
 .container {
 	margin: auto;
-	max-width: 680px;
+	max-width: 95%;
 }
 
 .shirt div {
