--- a/Treehouse-Tech-Degree-Unit-3/css/style.css
+++ b/Treehouse-Tech-Degree-Unit-3/css/style.css
@@ -174,6 +174,11 @@ select{
 	letter-spacing: 1px
 }
 
+#nameAlert, #emailAlert{
+	font-size: 18px;
+	margin-left: 10px
+}
+
 .activities{
 	letter-spacing: 2px;
 }
